# gitpoli

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/actions/eval-policy/: action.yml
.github/workflows/: policy-check.yml  policy-docker-ci.yml  policy-release.yml  pr-policy.yml  python-ci.yml  reusable-deploy-check.yml  reusable-pr-check.yml  test-deploy.yml
.repol/: deploy.yaml  pullrequest.yaml
infra/integration/: .env.example  README.md  docker-compose.yml
infra/integration/scripts/: check_app.py  check_env.py  enable_protection_rule.py  setup.sh
infra/integration/smee/: Dockerfile  entrypoint.sh
infra/local/: Dockerfile.opa  README.md  docker-compose.yml
infra/local/payloads/: deploy_denied.json  deploy_valid.json  pr_denied.json  pr_review_approved.json  pr_review_changes_requested.json  pr_valid.json
infra/local/scripts/: test.sh  test_handlers.sh
infra/server/app/: __init__.py  audit.py  config.py  github.py  helpers.py  (+1 more)
infra/smee/: Dockerfile  entrypoint.sh
policies/: deploy.rego  pullrequest.rego
policies/lib/: helpers.rego
policies/tests/: deploy_test.rego  pullrequest_test.rego
schemas/: github_env_protect_schema.json  github_pull_request_schema.json
scripts/: validate_schema.sh
src/app/: audit.py  github.py  helpers.py  opa.py
tests/: conftest.py  test_audit_trail.py  test_handler_registry.py  test_policy_evaluator.py
tests/handlers/: README.md  test_new_handler.py
tests/policies/: README.md  test_new_policy.py
(+14 files in other folders)
